--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,16 @@
 language: php
 php:
-  - 5.4
-  - 5.5
+  - 5.6
+  - 7.0
+  - 7.1
 
 before_script:
   - composer self-update
-  - composer update --prefer-source; composer install --dev --prefer-source;
+  - composer install
 
 script:
   - ./vendor/bin/phpunit --coverage-clover ./build/logs/clover.xml
   - ./vendor/bin/phpcs --standard=PSR2 ./src/ ./tests/
-  
-after_script:
-  - php vendor/bin/coveralls -v
 
 notifications:
   irc: "irc.freenode.org#zftalk.modules"
