--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         }
     ],
     "require": {
-        "zendframework/zend-modulemanager": "^2.5 || ^3.0",
+        "zendframework/zend-modulemanager": "^2.5",
         "zendframework/zend-eventmanager": "^2.5 || ^3.0",
         "zendframework/zend-servicemanager": "^2.5 || ^3.0",
         "doctrine/data-fixtures": "^1.0",
@@ -30,6 +30,8 @@
     "require-dev": {
         "ise/php-metapackage-development": "^1.0"
     },
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "autoload": {
         "psr-4": {
             "DoctrineDataFixtureModule\\": "src/"
